--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongodb": "^4.5.0",
-    "mongoose": "^5.7.5",
-    "typescript": "^4.6.3"
+    "mongoose": "^5.7.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon AppServer.js",
+    "start": "node AppServer.js",
+    "nodemon": "nodemon",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "dev": "concurrently \"nodemon\" \"tsc --watch\" \"mongod -port 3000 -dbpath \"./db\"\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "concurrently": "^9.0.1",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.6.3"
   }
 }
