--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "nodemon": "nodemon",
     "build": "tsc",
     "watch": "tsc --watch",
-    "dev": "mongod -port 3000 -dbpath ./db && concurrently \"nodemon\" \"tsc --watch\"\""
+    "db": "mongod -port 3000 -dbpath ./db",
+    "dev": "npm-run-all --parallel db watch nodemon"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.6.3"
   }
 }
