--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "This directory contains two express servers: * AppServer.js - Combined Node/Express web server w/ Mongo Access * Server.js - Encapsulated Node/Express web server w/ Mongo Access",
   "main": "AppServer.js",
   "dependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.11.1",
-    "@types/node": "^20.11.5",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "mongodb": "^4.5.0",
     "mongoose": "^5.7.5"
   },
@@ -26,6 +25,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.4",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.6.3"
