--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "mongodb": "^4.5.0",
-    "mongoose": "^5.7.5"
+    "mongoose": "^5.7.5",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.4",
+    "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.6.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,13 +29,5 @@
     "dev": "npm-run-all --parallel db watch nodemon"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.4",
-    "nodemon": "^3.1.7",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.6.3"
-  }
+  "license": "ISC"
 }
