--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "skipLibCheck": true
   },
   "watchOptions": {
     "excludeDirectories": ["node_modules"]
