tsconfig: ignore angular folder when watching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,10 @@
     "skipLibCheck": true
   },
   "watchOptions": {
-    "excludeDirectories": ["node_modules"]
+    "excludeDirectories": [
+      "node_modules",
+      "angular"
+    ]
   },
   "includes" : [
     "**/*"
