tsconfig.json: ignore angular folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,16 @@
     "skipLibCheck": true
   },
   "watchOptions": {
-    "excludeDirectories": ["node_modules"]
+    "excludeDirectories": [
+      "node_modules",
+      "surveysage"
+    ]
   },
   "includes" : [
     "**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "surveysage"
   ]
 }
