Implement CHATGPT and GEMINI API

--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "This directory contains two express servers: * AppServer.js - Combined Node/Express web server w/ Mongo Access * Server.js - Encapsulated Node/Express web server w/ Mongo Access",
   "main": "AppServer.js",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.4",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
-    "dotenv": "^16.3.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "mongodb": "^4.5.0",
     "mongoose": "^5.7.5",
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.4",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
+    "openai": "^4.72.0",
     "typescript": "^5.6.3"
   },
   "scripts": {
