--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
-    "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.4",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
@@ -34,5 +31,13 @@
     "dev": "npm-run-all --parallel tsc:watch nodemon"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "assert": "^2.1.0",
+    "async": "^3.2.6",
+    "chai": "^5.1.2",
+    "chai-http": "^5.1.1",
+    "mocha": "^10.8.2",
+    "q": "^2.0.3"
+  }
 }
