--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": ["ES2015", "es2018", "dom", "ES6"],
+    "lib": ["ES2015", "es2018", "dom", "ES6", "ESNext"],
     "target": "es6",
     "moduleResolution" : "node",
     "rootDir": "./",
