--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
+    "assert": "^2.1.0",
+    "async": "^3.2.6",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.3.3",
+    "chai": "^5.1.2",
+    "chai-http": "^5.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "mocha": "^10.8.2",
     "mongodb": "^4.5.0",
     "mongoose": "^5.7.5",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "openai": "^4.72.0",
-    "typescript": "^5.6.3",
-    "assert": "^2.1.0",
-    "async": "^3.2.6",
-    "chai": "^5.1.2",
-    "chai-http": "^5.1.1",
-    "mocha": "^10.8.2",
-    "q": "^2.0.3"
+    "q": "^2.0.3",
+    "typescript": "^5.6.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
