--- a/surveysage/.vscode/tasks.json
+++ b/surveysage/.vscode/tasks.json
@@ -6,6 +6,7 @@
       "type": "npm",
       "script": "start",
       "isBackground": true,
+      "label": "angular: start dev",
       "problemMatcher": {
         "owner": "typescript",
         "pattern": "$tsc",
@@ -20,23 +21,5 @@
         }
       }
     },
-    {
-      "type": "npm",
-      "script": "test",
-      "isBackground": true,
-      "problemMatcher": {
-        "owner": "typescript",
-        "pattern": "$tsc",
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": {
-            "regexp": "(.*?)"
-          },
-          "endsPattern": {
-            "regexp": "bundle generation complete"
-          }
-        }
-      }
-    }
   ]
 }
