automate angular build and remove dist from github

--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "scripts": {
     "start": "node AppServer.js",
     "nodemon": "nodemon",
-    "build": "tsc",
+    "build": "npm-run-all --serial tsc:build angular:build",
     "tsc:build": "tsc",
     "tsc:watch": "tsc --watch",
+    "angular:build": "cd surveysage && npm run build",
     "db": "mongod -port 3000 -dbpath ./db",
     "dev": "npm-run-all --parallel tsc:watch nodemon"
   },
