--- a/.github/workflows/main_surveysage.yml
+++ b/.github/workflows/main_surveysage.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: install angular cli
+        run: |
+          npm i -g @angular/cli
+
       - name: npm install, build, and test
         run: |
           npm install
