build: optimize flags

--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
   "scripts": {
     "start": "node AppServer.js",
     "nodemon": "nodemon",
-    "build": "npm-run-all --serial tsc:build angular:build",
+    "build": "npm-run-all --parallel tsc:build angular:build",
     "tsc:build": "tsc",
     "tsc:watch": "tsc --watch",
-    "angular:build": "cd surveysage && npm install && npm run build",
+    "angular:dev": "cd surveysage && npm run start",
+    "angular:build": "cd surveysage && npm ci && npm run build",
     "db": "mongod -port 3000 -dbpath ./db",
     "dev": "npm-run-all --parallel tsc:watch nodemon"
   },
