--- a/.github/workflows/main_surveysage.yml
+++ b/.github/workflows/main_surveysage.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: |
+            package-lock.json
+            surveysage/package-lock.json
 
       - name: install angular cli
         run: |
@@ -27,7 +31,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm ci
           npm run build --if-present
           npm run test --if-present
 
