--- a/.github/workflows/main_surveysage.yml
+++ b/.github/workflows/main_surveysage.yml
@@ -2,8 +2,6 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
 name: Build and deploy Node.js app to Azure Web App - SurveySage
-env: 
-  WEBSITE_RUN_FROM_PACKAGE: "1"
 
 on:
   push:
@@ -21,8 +19,8 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
-          cache: "npm"
+          node-version: '20.x'
+          cache: 'npm'
           cache-dependency-path: |
             package-lock.json
             surveysage/package-lock.json
@@ -50,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Production"
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -63,7 +61,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -71,10 +69,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1D76BCF9CC45470ABB5CD15A967E4A42 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B00DBC8900434DD7983F6B12FCA34C20 }}
 
-      - name: "Deploy to Azure Web App"
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "SurveySage"
-          slot-name: "Production"
+          app-name: 'SurveySage'
+          slot-name: 'Production'
           package: .
+          
