--- a/surveysage/angular.json
+++ b/surveysage/angular.json
@@ -76,6 +76,9 @@
               "buildTarget": "surveysage:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
