--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "async": "^3.2.6",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "jquery": "^3.7.1",
     "mocha": "^10.8.2",
     "mongodb": "^4.5.0",
