Revert "speed up building and compilation"
This reverts commit c47b755d9b6a42aa137cb4985f0317e64e172c0e.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "tsc:build": "tsc",
     "tsc:watch": "tsc --watch",
     "angular:dev": "cd surveysage && ng serve --proxy-config src/proxy.conf.json",
-    "angular:build": "cd surveysage && npm install && ng build --source-map=false",
+    "angular:build": "cd surveysage && npm install && npm run build",
     "db": "mongod -port 3000 -dbpath ./db",
     "dev": "npm-run-all --parallel tsc:watch nodemon"
   },
